# bazel-toolchains-explained

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  WORKSPACE.bazel  default.nix  flake.nix
hermetic_sh/: BUILD.bazel.template  defs.bzl
nix/: sources.json
rules_cc/: BUILD.bazel  hello.cpp
rules_iron/: BUILD.bazel  defs.bzl
rules_iron/private/: iron_binary_v0.bzl
rules_iron/private/compiler/: BUILD.bazel  iron-compile.sh  iron.cpp.template
