"""Simple example of binary application compiled using rules_cc [1].

It's goal is to help illustrate the toolchain resolution mechanism for
single type of toolchain (CC).

[1] https://github.com/bazelbuild/rules_cc
"""

load("@rules_cc//cc:defs.bzl", "cc_library")

cc_binary(
    name = "hello",
    srcs = ["hello.cpp"],
    copts = ["-std=c++20"],
)
